--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.taranair.rpi.Splash"
-    android:background="@color/black"
+    android:background="@color/teal"
+    android:gravity="center"
     android:id="@+id/splash">
 
     <TextView
