--- a/app/src/main/res/layout/activity_main_activity2.xml
+++ b/app/src/main/res/layout/activity_main_activity2.xml
@@ -4,18 +4,28 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@color/teal"
     tools:context="com.example.taranair.rpi.MainActivity2">
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical" android:layout_width="fill_parent"
+
+        android:layout_height="fill_parent">
 
     <Button
         android:text="HOME"
         android:onClick="sendMessage1"
         android:layout_width="wrap_content"
+        android:textColor="@color/white"
         android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/savedRoutes"
         android:layout_width="wrap_content"
+        android:textColor="@color/white"
+        android:textSize="32sp"
         android:layout_height="wrap_content" />
 
+    </LinearLayout>
 
 </RelativeLayout>
