--- a/app/src/main/res/layout/activity_destination_screen.xml
+++ b/app/src/main/res/layout/activity_destination_screen.xml
@@ -18,9 +18,37 @@
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:textSize="32sp"
-            android:text="Where do you want to go?"/>
+            android:text="Enter IP Address"/>
+
+        <EditText android:id="@+id/edit_text2"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="" />
+
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textSize="32sp"
+            android:text="Enter latitude"/>
 
         <EditText android:id="@+id/edit_text"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textSize="32sp"
+            android:text="Enter longitude"/>
+
+        <EditText android:id="@+id/edit_text1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
