--- a/app/src/main/res/layout/activity_main_activity2.xml
+++ b/app/src/main/res/layout/activity_main_activity2.xml
@@ -3,10 +3,13 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@color/teal"
+    android:textColor="@color/white"
     >
     <ListView
         android:id="@+id/listview"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
         />
 </LinearLayout>
