--- a/app/src/main/res/layout/activity_destination_screen.xml
+++ b/app/src/main/res/layout/activity_destination_screen.xml
@@ -5,12 +5,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="@color/teal"
-    android:gravity="center"
+    android:gravity="center_horizontal"
     tools:context="com.example.taranair.rpi.DestinationScreen">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical" android:layout_width="fill_parent"
-        android:gravity="center"
+        android:gravity="center_horizontal"
         android:layout_height="fill_parent">
 
         <TextView
